Fix width issue on mobile

--- a/assets/source/scss/main.scss
+++ b/assets/source/scss/main.scss
@@ -161,8 +161,7 @@ body {
   html,
   body {
     min-width: 320px;
-    height: auto;
-    overflow: scroll;
+    overflow-x: auto;
   }
 }
 
