--- a/assets/source/scss/pages.scss
+++ b/assets/source/scss/pages.scss
@@ -180,7 +180,7 @@ body.is-loading #main2 {
   transition: transform 1s ease, opacity 1s ease;
 }
 
-@media screen and (max-width: 375px) {
+@media screen and (max-width: 480px) {
   .mainBody {
     padding: 1.5em 1em;
   }
